# glowberry

./: Cargo.toml  README.md  justfile
apps/glowberry-settings/: Cargo.toml  justfile
apps/glowberry-settings/data/: io.github.hojjatabdollahi.glowberry-settings.desktop
apps/glowberry-settings/i18n/en/: glowberry_settings.ftl
apps/glowberry-settings/src/: app.rs  i18n.rs  main.rs
apps/glowberry-settings/src/app/: wallpaper_subscription.rs
apps/glowberry-settings/src/pages/: mod.rs
apps/glowberry-settings/src/widgets/: mod.rs  shader_preview.rs
config/: Cargo.toml
config/src/: lib.rs  power_saving.rs  state.rs
crates/cosmic-bg-lib/: Cargo.toml
crates/cosmic-bg-lib/src/: colored.rs  draw.rs  engine.rs  external_surface.rs  fragment_canvas.rs  img_source.rs  lib.rs  shader_shm.rs  user_context.rs  wallpaper.rs
crates/glowberry-lib/: Cargo.toml
crates/glowberry-lib/src/: colored.rs  draw.rs  engine.rs  external_surface.rs  fragment_canvas.rs  gpu.rs  img_source.rs  lib.rs  shader_analysis.rs  toplevel_info.rs  upower.rs  wallpaper.rs  workspace_info.rs
data/: io.github.hojjatabdollahi.glowberry.desktop  io.github.hojjatabdollahi.glowberry.metainfo.xml
examples/: flames_baby.wgsl  organic_blob.wgsl  origami.wgsl  rainbow_bar.wgsl  singularity.wgsl  strange_wave.wgsl
scripts/: disable-glowberry-legacy.sh  disable-glowberry.sh  glowberry-switch
src/: main.rs
