[package]
name = "cosmic-bg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
color-eyre = "0.6.5"
colorgrad = { workspace = true }
cosmic-bg-config = { path = "./config" }
cosmic-bg-lib = { workspace = true }
eyre = "0.6.12"
fast_image_resize = { version = "5.1.4", features = ["image"] }
image = { workspace = true, features = ["hdr", "jpeg", "png", "rayon", "webp"] }
jxl-oxide = { version = "0.12.4", features = ["image"] }
notify = "8.2.0"
rand = "0.9.2"
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"
walkdir = "2.5"

[workspace]
members = ["config", "crates/cosmic-bg-lib"]

[workspace.dependencies]
colorgrad = "0.7.2"
cosmic-bg-lib = { path = "crates/cosmic-bg-lib" }
image = { version = "0.25.6", default-features = false }
tracing = "0.1.41"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
features = ["calloop"]

[profile.release]
opt-level = 3
