[package]
name = "glowberry-config"
version = "0.1.0"
edition = "2024"
description = "Configuration types for GlowBerry background service"
license = "MPL-2.0"

[dependencies]
derive_setters = "0.1.8"
image.workspace = true
serde = { version = "1.0", features = ["derive"] }
tracing.workspace = true
thiserror = "2"

[dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"
